Fixing jump on results collapse, fixing lack of noresults alert for searching

--- a/app/assets/stylesheets/search.css.scss
+++ b/app/assets/stylesheets/search.css.scss
@@ -8,6 +8,7 @@ th {
 
 body {
 	padding-top: 70px;
+	overflow-y: scroll;
 }
 
 #titlecol {
